[package]
name = "sqlx-odbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.29"
futures-util = "0.3.29"
log = "0.4.20"
odbc-api = "2.2.0"
sqlx = "0.7.2"
sqlx-core = "0.7.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
